--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: inherit, sans-serif !important;
   background-color: darkcyan;
   color: black;
 }
